<resources>
    <string name="app_name">Amikom Center</string>
    <string name="title_activity_login">LoginActivity</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>
    <string name="login_text">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="masuk">Masuk</string>
    <string name="login_illustration_content_description">Login Illustration</string>
    <string name="atau_masuk_dengan">Atau masuk dengan</string>
    <string name="twitter_imgbtn">twitter_imgbtn</string>
    <string name="belum_mempunyai_akun">Belum mempunyai akun ? <b>Daftar</b></string>
    <string name="sign_up">Sign Up</string>
    <string name="for_join_with_us">For join with us</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last Name</string>
    <string name="re_password">Re-password</string>
    <string name="daftar">Daftar</string>
    <string name="lanjut">Lanjut</string>
    <string name="description_of_each_slider">Description of each slider</string>

    <string name="onboarding1"><b>Amikom Center</b> Menyediakan course teknologi informasi yang mencakup berbagai bidang.</string>
    <string name="onboarding2"><b>Tenaga pengajar</b> yang memiliki kompetensi dalam bidangnya masing - masing.</string>
    <string name="home">Home</string>
    <string name="favorite">Favorite</string>
    <string name="my_courses">My Courses</string>
    <string name="keranjang">Keranjang</string>
    <string name="akun">Akun</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="dummy_search">Cari kelas disini ...</string>
    <string name="category">Category</string>
    <string name="desain_multimedia"><![CDATA[Desain & Multimedia]]></string>
    <string name="bisnis_sdm"><![CDATA[Bisnis & Pengembangan SDM]]></string>
    <string name="networking">Networking</string>
    <string name="programming_web">Programming Web</string>
    <string name="top_course">Top Course</string>
    <string name="dummy_topcourse_text">Mulai Desain Aplikasi Mobile Dengan Figma</string>
    <string name="dummy_topCoursePrice">Rp. 200.000,-</string>
    <string name="dummy_PriceStrike">Rp.300.000,-</string>
    <string name="webinar">Webinar</string>
    <string name="see_all"><![CDATA[See All >]]></string>
    <string name="internship_program">Internship Program</string>
    <string name="amikom_center_blog">Amikom Center Blog</string>
    <string name="dummy_amikomcentertitle">AMIKOM TALK SERIES 1 : The Journey Behind The IT Career</string>
    <string name="game_development">Game Development</string>
    <string name="dummy_date">25 September 2020</string>
    <string name="title_akun">Akun</string>
    <string name="hello">Hello</string>
    <string name="dummy_name">Ahmad Zuhair Dzulfiqor</string>
    <string name="account_detail">Account Detail</string>
    <string name="personal_info">Personal Info</string>
    <string name="certificate">Certificate</string>
    <string name="message">Message</string>
    <string name="membership">Membership</string>
    <string name="lainnya">Lainnya</string>
    <string name="tentang_amikom_center">Tentang Amikom Center</string>
    <string name="review_aplikasi">Review Aplikasi</string>
    <string name="keluar">Keluar</string>
</resources>