<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/box_inset_layout_padding"
    android:background="@color/white"
    tools:context=".features.login.LoginActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/login_text"
        android:textColor="@color/colorPrimary"
        android:textSize="27sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="360dp"
        android:layout_height="250dp"
        android:layout_marginTop="28dp"
        android:src="@drawable/illustration_login"
        android:contentDescription="@string/login_illustration_content_description"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <LinearLayout
        android:id="@+id/et_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:orientation="vertical"
        android:paddingHorizontal="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imageView">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:background="@drawable/background_rounded_inputtext"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingHorizontal="18dp">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/transparent"
                android:hint="@string/email"
                android:textColor="@color/colorPrimary"
                android:inputType="textEmailAddress"
                android:autofillHints="@string/email" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/background_rounded_inputtext"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingHorizontal="18dp">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/transparent"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:textColor="@color/colorPrimary"
                android:autofillHints="@string/password" />

        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/button"
        android:layout_width="320dp"
        android:layout_height="55dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/background_rounded_button"
        android:text="@string/masuk"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/et_layout"
        app:layout_constraintStart_toStartOf="@+id/et_layout"
        app:layout_constraintTop_toBottomOf="@+id/et_layout" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/button">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/atau_masuk_dengan"
            android:textColor="@color/colorPrimary"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2">

            <ImageButton
                android:id="@+id/email_imgbtn"
                android:layout_width="38dp"
                android:layout_height="38dp"
                android:background="@color/transparent"
                android:contentDescription="@string/twitter_imgbtn"
                android:src="@drawable/email_imgbtn" />

            <ImageButton
                android:id="@+id/fb_imgbtn"
                android:layout_width="38dp"
                android:layout_height="38dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:background="@color/transparent"
                android:contentDescription="@string/twitter_imgbtn"
                android:src="@drawable/fb_imgbtn" />

            <ImageButton
                android:id="@+id/twitter_imgbtn"
                android:layout_width="38dp"
                android:layout_height="38dp"
                android:background="@color/transparent"
                android:contentDescription="@string/twitter_imgbtn"
                android:src="@drawable/twitter_imgbtn" />

        </LinearLayout>

        <TextView
            android:id="@+id/daftar_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/belum_mempunyai_akun"
            android:textColor="@color/colorPrimary"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toEndOf="@+id/linearLayout"
            app:layout_constraintStart_toStartOf="@+id/linearLayout"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout" />


    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>