<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="175dp"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    app:cardCornerRadius="8dp"
    android:elevation="8dp"
    android:clickable="true"
    android:foreground="?selectableItemBackground">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="200dp">

        <ImageView
            android:id="@+id/courseItem_img"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:contentDescription="@string/app_name"
            android:scaleType="centerCrop"
            android:src="@drawable/dummy_item_category"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/courseItem_tools"
            android:layout_width="30dp"
            android:layout_height="39dp"
            android:layout_marginEnd="16dp"
            android:scaleType="centerCrop"
            android:src="@drawable/dummy_course_tools"
            app:layout_constraintBottom_toTopOf="@+id/guideline"
            app:layout_constraintEnd_toEndOf="parent" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_begin="112dp" />

        <TextView
            android:id="@+id/courseItem_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="8dp"
            android:text="@string/dummy_topcourse_text"
            android:textColor="@color/topcourse_textcolor"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/guideline"
            tools:ignore="SmallSp" />

        <TextView
            android:id="@+id/courseItem_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginBottom="8dp"
            android:textStyle="bold"
            android:text="@string/dummy_topCoursePrice"
            android:textColor="@color/colorPrimaryDark"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/courseItem_price_strike"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dummy_PriceStrike"
            android:textSize="10dp"
            android:textColor="@color/grey"
            android:layout_marginStart="8dp"
            app:layout_constraintStart_toEndOf="@+id/courseItem_price"
            app:layout_constraintTop_toTopOf="@+id/courseItem_price" />






    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>