<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingHorizontal="32dp"
    tools:context=".features.register.RegisterActivity">



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_up"
            android:textColor="@color/colorPrimary"
            android:textSize="28sp"
            android:textStyle="bold"
            android:layout_marginStart="4dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/for_join_with_us"
            android:textColor="@color/colorPrimary"
            android:textSize="26sp"
            android:layout_marginStart="4dp"
            app:layout_constraintStart_toStartOf="@+id/textView3"
            app:layout_constraintTop_toBottomOf="@+id/textView3" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp">

            <LinearLayout
                android:id="@+id/linearLayout2"
                android:layout_width="0dp"
                android:layout_height="55dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="4dp"
                android:background="@drawable/background_rounded_outline_inputtext"
                android:gravity="center"
                android:orientation="vertical"
                android:paddingHorizontal="18dp"
                app:layout_constraintEnd_toStartOf="@+id/linearLayout4"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <EditText
                    android:id="@+id/et_firstname"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autofillHints="@string/email"
                    android:background="@color/transparent"
                    android:hint="@string/first_name"
                    android:inputType="text"
                    android:textColor="@color/colorPrimary" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLayout4"
                android:layout_width="0dp"
                android:layout_height="55dp"
                android:layout_marginStart="4dp"
                android:layout_marginTop="16dp"
                android:background="@drawable/background_rounded_outline_inputtext"
                android:gravity="center"
                android:orientation="vertical"
                android:paddingHorizontal="18dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/linearLayout2"
                app:layout_constraintTop_toTopOf="parent">

                <EditText
                    android:id="@+id/et_lastname"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autofillHints="@string/email"
                    android:background="@color/transparent"
                    android:hint="@string/last_name"
                    android:inputType="text"
                    android:textColor="@color/colorPrimary" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLayout3"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:layout_marginTop="16dp"
                android:background="@drawable/background_rounded_outline_inputtext"
                android:gravity="center"
                android:orientation="vertical"
                android:paddingHorizontal="18dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/linearLayout2"
                app:layout_constraintTop_toBottomOf="@id/linearLayout2">

                <EditText
                    android:id="@+id/et_emailregister"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autofillHints="@string/email"
                    android:background="@color/transparent"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"
                    android:textColor="@color/colorPrimary" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/LinearLayout4"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:layout_marginTop="16dp"
                android:background="@drawable/background_rounded_outline_inputtext"
                android:gravity="center"
                android:orientation="vertical"
                android:paddingHorizontal="18dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/linearLayout3">

                <EditText
                    android:id="@+id/et_passwordregister"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autofillHints="@string/email"
                    android:background="@color/transparent"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:textColor="@color/colorPrimary" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:layout_marginTop="16dp"
                android:background="@drawable/background_rounded_outline_inputtext"
                android:gravity="center"
                android:orientation="vertical"
                android:paddingHorizontal="18dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/LinearLayout4">

                <EditText
                    android:id="@+id/et_repassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autofillHints="@string/email"
                    android:background="@color/transparent"
                    android:hint="@string/re_password"
                    android:inputType="textPassword"
                    android:textColor="@color/colorPrimary" />

            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <Button
            android:id="@+id/btn_daftar"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:background="@drawable/background_rounded_button"
            android:layout_marginTop="24dp"
            android:text="@string/daftar"
            android:textColor="@color/white"
            android:textAllCaps="false"
            android:layout_marginBottom="16dp"
            />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>