<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginVertical="8dp">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="100dp"
        app:cardCornerRadius="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingVertical="8dp"
            android:paddingHorizontal="8dp">

            <ImageView
                android:id="@+id/iv_amikomcenterblog"
                android:layout_width="90dp"
                android:layout_height="match_parent"
                android:src="@drawable/amikomcenter_dummy"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:contentDescription="@string/app_name" />

            <TextView
                android:id="@+id/title_amikomcenterblog"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/dummy_amikomcentertitle"
                android:textColor="@color/topcourse_textcolor"
                android:textStyle="bold"
                android:layout_marginStart="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/iv_amikomcenterblog"
                app:layout_constraintTop_toTopOf="@+id/iv_amikomcenterblog"
                tools:layout_editor_absoluteY="8dp" />

            <androidx.cardview.widget.CardView
                android:id="@+id/cardView_amikomcenterblog_category"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:elevation="0dp"
                app:cardCornerRadius="5dp"
                android:backgroundTint="@color/primaryColorLight"
                app:layout_constraintBottom_toBottomOf="@+id/iv_amikomcenterblog"
                app:layout_constraintStart_toEndOf="@+id/iv_amikomcenterblog">

                <TextView
                    android:id="@+id/tv_amikomcenterblog_category"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:layout_marginHorizontal="4dp"
                    android:text="@string/game_development"
                    android:textSize="10sp"
                    tools:ignore="SmallSp" />

            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/tv_amikomcenterblog_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dummy_date"
                android:textSize="10sp"
                tools:ignore="SmallSp"
                app:layout_constraintBottom_toBottomOf="@+id/cardView_amikomcenterblog_category"
                app:layout_constraintEnd_toEndOf="parent" />


        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>