<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="250dp"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="10dp"
    android:paddingVertical="16dp"
    android:layout_marginHorizontal="8dp"
    android:layout_marginBottom="10dp"
    android:backgroundTint="@color/white"
    app:cardElevation="5dp">

<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/imgCarousel"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:scaleType="centerCrop"
        android:src="@drawable/webinar_dummy"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/titleTopCourse"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="8dp"
        android:minHeight="50dp"
        android:paddingHorizontal="16dp"
        android:text="@string/dummy_topcourse_text"
        android:textColor="@color/topcourse_textcolor"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgCarousel" />

    <TextView
        android:id="@+id/priceTopCOurse"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:paddingStart="16dp"
        android:paddingEnd="0dp"
        android:text="@string/dummy_topCoursePrice"
        android:textColor="@color/colorPrimary"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/titleTopCourse"
        app:layout_constraintTop_toBottomOf="@+id/titleTopCourse" />

    <TextView
        android:id="@+id/priceStrikeTopCourse"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dummy_PriceStrike"
        android:textSize="9sp"
        android:textColor="@color/topcourse_textcolor"
        android:textStyle="bold"
        android:layout_marginStart="8dp"
        app:layout_constraintStart_toEndOf="@+id/priceTopCOurse"
        app:layout_constraintTop_toTopOf="@+id/priceTopCOurse" />



</androidx.constraintlayout.widget.ConstraintLayout>


</androidx.cardview.widget.CardView>